// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ParticipantList > renders Unknown for missing user 1`] = `
<div>
  <div>
    <h4
      class="font-semibold text-sm mb-2 flex items-center gap-2"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-users w-4 h-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
        />
        <path
          d="M16 3.128a4 4 0 0 1 0 7.744"
        />
        <path
          d="M22 21v-2a4 4 0 0 0-3-3.87"
        />
        <circle
          cx="9"
          cy="7"
          r="4"
        />
      </svg>
      Participants (
      1
      )
    </h4>
    <div
      class="max-h-40 overflow-y-auto border rounded-lg"
    >
      <ul
        class="divide-y"
      >
        <li
          class="flex items-center justify-between px-3 py-2"
        >
          <span
            class="text-sm"
          >
            Unknown
          </span>
          <div
            class="inline-flex items-center rounded-md border font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-success text-success-foreground shadow hover:bg-success/80 px-2 py-0.5 text-[10px]"
          >
            Accepted
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`ParticipantList > renders multiple participants with different statuses 1`] = `
<div>
  <div>
    <h4
      class="font-semibold text-sm mb-2 flex items-center gap-2"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-users w-4 h-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
        />
        <path
          d="M16 3.128a4 4 0 0 1 0 7.744"
        />
        <path
          d="M22 21v-2a4 4 0 0 0-3-3.87"
        />
        <circle
          cx="9"
          cy="7"
          r="4"
        />
      </svg>
      Participants (
      4
      )
    </h4>
    <div
      class="max-h-40 overflow-y-auto border rounded-lg"
    >
      <ul
        class="divide-y"
      >
        <li
          class="flex items-center justify-between px-3 py-2"
        >
          <span
            class="text-sm"
          >
            Alice (Host)
          </span>
          <div
            class="inline-flex items-center rounded-md border font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-primary text-primary-foreground shadow hover:bg-primary/80 px-2 py-0.5 text-[10px]"
          >
            Host
          </div>
        </li>
        <li
          class="flex items-center justify-between px-3 py-2"
        >
          <span
            class="text-sm"
          >
            Bob
          </span>
          <div
            class="inline-flex items-center rounded-md border font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-success text-success-foreground shadow hover:bg-success/80 px-2 py-0.5 text-[10px]"
          >
            Accepted
          </div>
        </li>
        <li
          class="flex items-center justify-between px-3 py-2"
        >
          <span
            class="text-sm"
          >
            Charlie
          </span>
          <div
            class="inline-flex items-center rounded-md border font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-warning text-warning-foreground shadow hover:bg-warning/80 px-2 py-0.5 text-[10px]"
          >
            Pending
          </div>
        </li>
        <li
          class="flex items-center justify-between px-3 py-2"
        >
          <span
            class="text-sm"
          >
            Diana
          </span>
          <div
            class="inline-flex items-center rounded-md border font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-destructive text-destructive-foreground shadow hover:bg-destructive/80 px-2 py-0.5 text-[10px]"
          >
            Declined
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`ParticipantList > renders nothing when participants array is empty 1`] = `<div />`;

exports[`ParticipantList > renders single participant 1`] = `
<div>
  <div>
    <h4
      class="font-semibold text-sm mb-2 flex items-center gap-2"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-users w-4 h-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
        />
        <path
          d="M16 3.128a4 4 0 0 1 0 7.744"
        />
        <path
          d="M22 21v-2a4 4 0 0 0-3-3.87"
        />
        <circle
          cx="9"
          cy="7"
          r="4"
        />
      </svg>
      Participants (
      1
      )
    </h4>
    <div
      class="max-h-40 overflow-y-auto border rounded-lg"
    >
      <ul
        class="divide-y"
      >
        <li
          class="flex items-center justify-between px-3 py-2"
        >
          <span
            class="text-sm"
          >
            Alice
          </span>
          <div
            class="inline-flex items-center rounded-md border font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-success text-success-foreground shadow hover:bg-success/80 px-2 py-0.5 text-[10px]"
          >
            Accepted
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`ParticipantList > renders with clickable user names when onUserClick provided 1`] = `
<div>
  <div>
    <h4
      class="font-semibold text-sm mb-2 flex items-center gap-2"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-users w-4 h-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
        />
        <path
          d="M16 3.128a4 4 0 0 1 0 7.744"
        />
        <path
          d="M22 21v-2a4 4 0 0 0-3-3.87"
        />
        <circle
          cx="9"
          cy="7"
          r="4"
        />
      </svg>
      Participants (
      1
      )
    </h4>
    <div
      class="max-h-40 overflow-y-auto border rounded-lg"
    >
      <ul
        class="divide-y"
      >
        <li
          class="flex items-center justify-between px-3 py-2"
        >
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 text-primary underline-offset-4 hover:underline rounded-md text-xs p-0 h-auto"
          >
            Alice
          </button>
          <div
            class="inline-flex items-center rounded-md border font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-success text-success-foreground shadow hover:bg-success/80 px-2 py-0.5 text-[10px]"
          >
            Accepted
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`ParticipantList > renders with custom maxHeight 1`] = `
<div>
  <div>
    <h4
      class="font-semibold text-sm mb-2 flex items-center gap-2"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-users w-4 h-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
        />
        <path
          d="M16 3.128a4 4 0 0 1 0 7.744"
        />
        <path
          d="M22 21v-2a4 4 0 0 0-3-3.87"
        />
        <circle
          cx="9"
          cy="7"
          r="4"
        />
      </svg>
      Participants (
      1
      )
    </h4>
    <div
      class="max-h-96 overflow-y-auto border rounded-lg"
    >
      <ul
        class="divide-y"
      >
        <li
          class="flex items-center justify-between px-3 py-2"
        >
          <span
            class="text-sm"
          >
            Alice
          </span>
          <div
            class="inline-flex items-center rounded-md border font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-success text-success-foreground shadow hover:bg-success/80 px-2 py-0.5 text-[10px]"
          >
            Accepted
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`ParticipantList > renders without header when showHeader is false 1`] = `
<div>
  <div>
    <div
      class="max-h-40 overflow-y-auto border rounded-lg"
    >
      <ul
        class="divide-y"
      >
        <li
          class="flex items-center justify-between px-3 py-2"
        >
          <span
            class="text-sm"
          >
            Alice
          </span>
          <div
            class="inline-flex items-center rounded-md border font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-success text-success-foreground shadow hover:bg-success/80 px-2 py-0.5 text-[10px]"
          >
            Accepted
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
